--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+SQUARE_APPLICATION_ID=your-application-id
+SQUARE_ACCESS_TOKEN=your-access-token
+SQUARE_LOCATION_ID=your-location-id
